Add info about approximation

--- a/references.bib
+++ b/references.bib
@@ -334,3 +334,71 @@
     journal       = {Pattern Analysis and Machine Intelligence, IEEE Transactions on},
     doi           = {10.1109/34.31447}
 }
+
+@article{Terekhov,
+    author          = {Терехов Д.Е.},
+    title           = {Генерация текстурного меша и упаковка полигональных текстур в атлас},
+    year            = {2019}
+}
+
+@article{shewchuk97a,
+    author          = {Jonathan Richard Shewchuk},
+    title           = {Adaptive {P}recision {F}loating-{P}oint {A}rithmetic and {F}ast {R}obust {G}eometric {P}redicates},
+    journal         = {Discrete \& Computational Geometry},
+    volume          = 18,
+    number          = 3,
+    pages           = {305--363},
+    month           = oct,
+    year            = 1997
+}
+
+@book{Halfedge,
+    author          = {M\"{a}ntyl\"{a}, Martti},
+    title           = {An Introduction to Solid Modeling},
+    year            = {1987},
+    isbn            = {0881751081},
+    publisher       = {Computer Science Press, Inc.},
+    address         = {USA}
+}
+
+@techreport{DelaunayRemove,
+    title           = {{Vertex Removal in Two Dimensional Delaunay Triangulation: Asymptotic Complexity is Pointless}},
+    author          = {Devillers, Olivier},
+    url             = {https://hal.inria.fr/inria-00433107},
+    type            = {Research Report},
+    number          = {RR-7104},
+    pages           = {15},
+    institution     = {{INRIA}},
+    year            = {2009},
+    pdf             = {https://hal.inria.fr/inria-00433107/file/RR-7104.pdf},
+    hal_id          = {inria-00433107},
+    hal_version     = {v1},
+}
+
+@inproceedings{ImprovedIncremental,
+  title             = {{Improved incremental randomized Delaunay triangulation}},
+  author            = {Devillers, Olivier},
+  url               = {https://hal.inria.fr/hal-01179446},
+  booktitle         = {{Proceedings of the 14th Annual Symposium on Computational Geometry}},
+  address           = {Mineapolis, United States},
+  publisher         = {{ACM}},
+  pages             = {106-115},
+  year              = {1998},
+  doi               = {10.1145/276884.276896},
+  hal_id            = {hal-01179446},
+  hal_version       = {v1},
+}
+
+@article{LinearDelaunay,
+  author            = {Marco Livesu and Gianmarco Cherchi and Riccardo Scateni and Marco Attene},
+  title             = {Deterministic Linear Time Constrained Triangulation using Simplified Earcut},
+  journal           = {CoRR},
+  volume            = {abs/2009.04294},
+  year              = {2020},
+  url               = {https://arxiv.org/abs/2009.04294},
+  archivePrefix     = {arXiv},
+  eprint            = {2009.04294},
+  timestamp         = {Thu, 17 Sep 2020 12:49:52 +0200},
+  biburl            = {https://dblp.org/rec/journals/corr/abs-2009-04294.bib},
+  bibsource         = {dblp computer science bibliography, https://dblp.org}
+}
