--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{amsmath}
 
 \newenvironment{algo}[1][]
   {\begin{algorithm}[#1]
@@ -15,6 +16,9 @@
   {\end{algorithm}}
 
 \algdef{SE}[DOWHILE]{Do}{DoWhile}{\algorithmicdo}[1]{\algorithmicwhile\ #1}%
+
+\newcommand*\gsegment[1]{\overline{#1}}
+\newcommand*\gline[1]{\overleftrightarrow{#1}}
 
 \author{Терехов Д.Е.}
 \setschool{ШКОЛА ЕСТЕСТВЕННЫХ НАУК ДВФУ}
@@ -125,7 +129,7 @@
 
     Алгоритм оперирует с дискретными координатами пикселей, а в компьютерной графике UV координаты это непрерывные вещественные числа. Такое представление контура создает некоторые проблемы.
 
-    Во-первых, может получится контур с самопересечениями, которые нетривиально разрешить. На FIG № изображены примеры контуров с самопересечением. Красным обозначены вершины, которые алгоритм посещает дважды.
+    Во-первых, может получится контур с самопересечениями, которые нетривиально разрешить. На \ref{SelfIntersectingContours} изображены примеры контуров с самопересечением. Красным обозначены вершины, которые алгоритм посещает дважды.
     \begin{figure}[H]
         \centering
         \begin{subfigure}[t]{.49\linewidth}
@@ -138,7 +142,8 @@
             \includegraphics[scale=0.4]{images/SelfIntersectingContour2.png}
             \caption{Контуры изображения}
         \end{subfigure}
-        \caption{Пример работы алгоритма Suzuki Satoshi}
+        \caption{Примеры контуров с самопересечением}
+        \label{SelfIntersectingContours}
     \end{figure}
 
     Во-вторых, некоторые пиксели при отрисовке будут обрезаны, т.к. дискретные координаты пикселя в прямой интерпретации в качестве UV координат будут являются координатами левого верхнего угла пикселя. В таком случае, нижние и правые пиксели просто не будут учтены при отрисовке.
@@ -160,7 +165,7 @@
             \includegraphics[scale=0.2]{images/SuzukiExample2_wanted_uvs.png}
             \caption{Контур изображения и желаемые UV координаты}
         \end{subfigure}
-        \caption{Пример работы алгоритма Suzuki Satoshi}
+        \caption{Проблема неправильных UV координат}
     \end{figure}
 
     Для решения данных проблем был разработан алгоритм, который превращает попиксельный контур в повершинный.
@@ -198,6 +203,143 @@
     Функции NextCCWVertex(texel, vertex) и NextCWVertex(texel, vertex) возвращают следующую вершину текселя против и по часовой соответственно. IsVertexOf(texel, vertex) возвращает true, если вершина принадлежит текселю.
 
     Для того, чтобы снизить количество вершин перед следующим этапом обработки изображения, контуры подвергаются первичной аппроксимации. Самым очевидным способом аппроксимации контура является удаление вершин лежащих на одной прямой. Также существуют алгоритмы упрощения цифровых кривых. В данной работе был реализован алгоритм Teh-Chin\cite{TehChin} c $L1$ и $k\cos$ метриками.
+
+    \subsection{Аппроксимация полигонов}
+    Аппроксимация полигонов для текстурных мешей отличается от аппроксимации полигонов, например, в GIS системах: запрещено нарушать искомые границы, а так же необходимо минимизировать не только количество вершин, но и добавочную площадь. Мета-алгоритм можно описать следующим образом:
+
+    \begin{algo}[H]
+        \setstretch{1}
+        \caption{Meta-algorithm for a set of polygons approximation}
+        \begin{algorithmic}[1]
+            \Procedure{ApproximatePolygons}{$polygons, hierarchy, frameRect$}
+                \State $minExtractor, topology, frame = $
+                \State $Initialize(polygons, hierarchy, frameRect)$
+                \While {Termination Condition is not achieved}
+                    \If {$!TryApproximate(\cdots)$ and $!TryMerge(\cdots)$}
+                    \State \textbf{break}
+                    \EndIf
+                \EndWhile
+                \State \textbf{return} $RetrieveImage(\cdots)$
+            \EndProcedure
+        \end{algorithmic}
+    \end{algo}
+
+    На стадии инициализации создаются две модели множества полигонов. Первая модель это дерево полигонов, где каждый узел дерева это полигон $P_i$, представленный двусвязным зацикленным списком вершин $P_i = \left(v_j\right)_{j=0}^{n - 1}$, $v_{j \pm m}$ подразумевает $v_{j \pm m \pmod n}$. Корнем дерева является ограничивающая рамка ($frame$). Вторая модель ($topology$) это триангуляция Делоне с ограничениями. В реализации алгоритма использовался пакет, разработанный в рамках бакалаврской выпускной квалификационной работы \cite{Delaunay}. Данный пакет подвергся доработке и оптимизациям СМ ПОДРАЗДЕЛ КАКОЙ-ТО. Триангуляция Делоне это мощнейший инструмент для проверки преобразований над полигонами, а также вычисления полигона видимости. Подробнее в РАЗДЕЛЕ НОМЕР КАКОЙ-ТО. Также на стадии инициализации происходит подсчет минимальной возможной трансформации для каждой вершины. "Стоимость" трансформации измеряется в добавочной площади. Для быстрого поиска минимальной трансформации (т.е. трансформации с минимальной стоимостью) используется сбалансированное дерево поиска ($minExtractor$).
+
+    Далее выполняются преобразования или мерджатся полигоны, пока не условие выхода не будет достигнуто. Процедура $RetrieveImage$ возвращает объект типа $Image$. $Image$ содержит в себе все вершины и индексных массив (массив троек индексов вершин), а также массив объектов типа $ImageObject$. Объектом картинки называется граничный контур со всеми принадлежащими ему дырами. $ImageObject$ содержит в себе индексы вершин для контура и всех дыр, а также индексы троек индексов, ему принадлежащих. Данные структуры данных в дальнейшем используются для упаковки.
+
+    \subsubsection{Преобразования над вершинами}
+    Стоимостью преобразования является добавляемая площадь площадь, которая представляет из себя один или два треугольника. Возможность преобразования проверяется путем вставки в триангуляцию структурных ребер и проверки на существование определенного треугольника. Данная проверка необходима для того, чтобы избежать случаев, когда какая-то другая граница попадает в добавочную площадь.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/triangle_existance_check.png}
+        \caption{Соседняя граница попадает в добавочную площадь}
+    \end{figure}
+
+    \paragraph{Удаление вершин, лежащий на одной прямой}
+    Очевидно, данная трансформация имеет нулевую стоимость и проста в реализации.
+    \paragraph{Удаление вогнутого/выпуклого угла}
+    Если вершина $v_i$ принадлежит границе или дыре и образует вогнутый или выпуклый угол соответственно, то возможно провести отрезок $\gsegment{v_{i - 1}v_{i + 1}}$ и удалить вершину $v_i$. Также из теоремы о двух ушах следует, что любой последовательностью  таких преобразований можно сократить дыру до треугольника. Теорема о двух ушах гласит, что в каждом просто полигоне с более чем 3 вершинами есть хотя бы 2 уха. Ухом называется вершина, соседние вершины которой можно соединить отрезком, который будет полностью лежать внутри полигона.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/earcut.png}
+        \caption{Удаление вогнутого угла}
+    \end{figure}
+    \paragraph{Пересечение сторон}
+    Если $v_i$ образует выпуклый угол, то может существовать возможность заменить вершину $v_i$ и $v_{i + 1}$ пересечением прямых $\gline{v_{i - 1}v_i}$ и $\gline{v_{i + 1}v_{i + 2}}$. Для проверки возможности такого преобразования необходимо предварительно проверить знак параметра при пересечении прямых, используя векторное параметрическое уравнение ($\vec{r} = \vec{r_0} + t \cdot \vec{u}$).
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/bendneighbor2.png}
+        \caption{Пересечение сторон}
+    \end{figure}
+
+    \paragraph{Выгибание соседней вершины}
+    Данное преобразование является оптимизированной версией удаления вогнутого угла. Если линия, образованная предыдущей и пред предыдущей вершинами, пересекает сторону, образованную текущей и следующей вершинами, то существует возможность заменить предыдущую и текущую вершины пересечением линии и стороны. Аналогично для четверки следующая, последующая, текущая и предыдущая вершин.
+
+    Данное преобразование является оптимизированной версией удаления вогнутого угла. Если $\gline{v_{i - 2}v_{i - 1}}$ пересекает $\gsegment{v_iv_{i + 1}}$, то можно не отрезать весь угол, а заменить $v_{i - 1}$ и $v_{i}$ пересечением. Аналогично работает для $\gline{v_{i + 2}v_{i + 1}}$ и $\gsegment{v_iv_{i - 1}}$.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/bendneighbor.png}
+        \caption{Выгибание соседней вершины}
+    \end{figure}
+
+    \paragraph{Выгибание двух соседних вершин}
+    Пусть $v_{i - 1}$, $v_{i}$ и $v_{i + 1}$ являются вершинами выпуклых углов, тогда можно попробовать заменить все 3 вершины пересечением $\gline{v_{i - 2}v_{i - 1}}$ и $\gline{v_{i + 2}v_{i + 1}}$ с вертикальной или горизонтальной прямой, проходящей через $v_i$.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/bendoutboth.png}
+        \caption{Выгибание двух соседних вершин к вертикальной прямой}
+    \end{figure}
+    \paragraph{Удаление треугольной дыры}
+    Если дыра упростилась до треугольника и внутри нет граничных полигонов, то единственная возможная трансформация для этих вершин -- удаление всей треугольной дыры. Это также влечет за собой удаление полигона из дерева полигонов.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/remove_triangular_hole.png}
+        \caption{Удаление треугольной дыры}
+    \end{figure}
+
+    \subsubsection{Мердж полигонов}
+    Рассказ про Triangular Expansion, алгоритм Joe and Simpson и алгоритм Asano.
+    \begin{figure}[H]
+        \centering
+        \begin{subfigure}[t]{\linewidth}
+            \centering
+            \includegraphics[scale=1]{images/polygonmerge.png}
+            \caption{Мердж границы с дырой}
+        \end{subfigure}
+        \begin{subfigure}[t]{\linewidth}
+            \centering
+            \includegraphics[scale=1]{images/polygonmerge2.png}
+            \caption{Мердж границы с границей}
+        \end{subfigure}
+    \end{figure}
+
+    \subsubsection{Применение преобразований}
+    На каждой итерации цикла применяется аппроксимирующее преобразование с минимальной стоимостью. После применения преобразования пересчитываются преобразования соседних вершин.
+    Аппроксимация соседних контуров или объемлющей дыры могут повлияет на валидность посчитанного преобразования, поэтому при неудачной попытке преобразование для вершины пересчитывается и вершина кладется обратно в $minExtractor$. Такой ленивый пересчет позволяет избежать огромных временных затрат, так как любая трансформация может в худшем случае повлиять на трансформацию $O\left(n\right)$ вершин. Однако на практике такое встречается редко.
+
+    \subsubsection{Вычислительная устойчивость}
+    Вычислительная устойчивость алгоритма достигается использованием вычислительно устойчивых геометрических предикатов, разработанных Jonathan Shewchuk\cite{shewchuk97a}. Данные предикаты также используются для построения Делоне с ограничениями.
+    \subsubsection{Меш}
+    В дальнейшем для упаковки и отрисовки в атлас понадобится меш всех объектов на изображении. Так как для аппроксимации создается триангуляция Делоне, то достаточно выбрать из неё нужные треугольники. Для этого достаточно запустить обход в глубину триангуляции. Основой триангуляции является структура данных Halfedge \cite{Halfedge}, представляющая собой ориентированное ребро с указателем на следующее и соседнее (ориентированное в обратном направлении) ребро. Каждое структурное (constrained) ребро триангуляции является ребром одного из полигонов. Значит, при переходе через такое ребро мы входим или выходим в/из площади объекта на картинке.
+
+    \begin{algo}[H]
+        \setstretch{1}
+        \caption{Retrieve image mesh}
+        \begin{algorithmic}[1]
+            \State $used \gets \emptyset$
+            \State $faceList \gets []$
+            \State $polygonToFaceIndecies, sideToPolygon \gets Precalculate()$
+            \Procedure{RetrieveMesh}{$edge, faceIndecies, faceList$}
+                \If{$faceIndecies \neq null$} \Comment{Means inside a polygon}
+                    \State $faceIndecies.Add(faceList.Count)$
+                    \State $faceList.Add(edge.ToFace())$
+                    \State $current \gets edge.Next$
+                    \While{$current \neq edge$}
+                        \If{$current.Twin \neq null \; \textbf{and} \; used \cap current != \emptyset$ }
+                            \State $used \gets used \cup current$
+                            \State $twin \gets current.Twin$
+                            \State $fis \gets faceIndecies$
+                            \If{$twin.IsConstrained$}
+                                \State $polygon \gets sideToPolygon[edge]$ \Comment{returns polygon or null}
+                                \State $fis \gets polygonToFaceIndecies[polygon]$
+                            \EndIf
+                            \State $RetrieveMesh(twin, fis, faceList)$
+                        \EndIf
+                    \EndWhile
+                \EndIf
+                \State $current \gets current.Next$
+            \EndProcedure
+        \end{algorithmic}
+    \end{algo}
+
+    \subsubsection{Доработка триангуляции Делоне}
+    \cite{DelaunayRemove}\cite{LinearDelaunay}
     \newpage
     \bibliographystyle{ugost2008ls}
     \bibliography{references}
