Add info about genetic aglorithm; Update fefu_thesis

--- a/references.bib
+++ b/references.bib
@@ -4,10 +4,13 @@
     language     = {english},
 }
 
-@article{Delaunay,
+@masterthesis{Delaunay,
     title        = {Генерация текстурного меша и упаковка полигональных текстур в атлас},
-    author       = {Терехов Д.Е.},
+    author       = {Терехов, Дмитрий Евгеньевич},
     language     = {russian},
+    school       = {Дальневосточный Федеральный Университет},
+    year         = {2019},
+    type         = {Выпускная квалификационная работа}
 }
 
 @online{CitrusRepo,
@@ -401,4 +404,78 @@
   timestamp         = {Thu, 17 Sep 2020 12:49:52 +0200},
   biburl            = {https://dblp.org/rec/journals/corr/abs-2009-04294.bib},
   bibsource         = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{RankingSelection,
+    author          = {Baker, James E.},
+    title           = {Reducing Bias and Inefficiency in the Selection Algorithm},
+    year            = {1987},
+    isbn            = {0805801588},
+    publisher       = {L. Erlbaum Associates Inc.},
+    address         = {USA},
+    booktitle       = {Proceedings of the Second International Conference on Genetic Algorithms on Genetic Algorithms and Their Application},
+    pages           = {14–21},
+    numpages        = {8},
+    location        = {Cambridge, Massachusetts, USA}
+}
+
+@article{GreinerHormann,
+    author          = {Greiner, Günther and Hormann, Kai},
+    year            = {1998},
+    month           = {04},
+    pages           = {71-83},
+    title           = {Efficient Clipping of Arbitrary Polygons.},
+    volume          = {17},
+    journal         = {ACM Trans. Graph.},
+    doi             = {10.1145/274363.274364}
+}
+
+@article{Vatti,
+    author          = {Vatti, Bala R.},
+    title           = {A Generic Solution to Polygon Clipping},
+    year            = {1992},
+    issue_date      = {July 1992},
+    publisher       = {Association for Computing Machinery},
+    address         = {New York, NY, USA},
+    volume          = {35},
+    number          = {7},
+    issn            = {0001-0782},
+    url             = {https://doi.org/10.1145/129902.129906},
+    doi             = {10.1145/129902.129906},
+    journal         = {Commun. ACM},
+    month           = jul,
+    pages           = {56–63},
+    numpages        = {8},
+    keywords        = {intersection, contributing local minimum, trapezoids, vertex classification, scanbeam, hidden surface, polygon clipping, contributing edge, connectivity coherence, spatial coherence, successor edge, unions, difference}
+}
+
+@article{Martinez,
+    title           = {A simple algorithm for Boolean operations on polygons},
+    journal         = {Advances in Engineering Software},
+    volume          = {64},
+    pages           = {11-19},
+    year            = {2013},
+    issn            = {0965-9978},
+    doi             = {https://doi.org/10.1016/j.advengsoft.2013.04.004},
+    url             = {https://www.sciencedirect.com/science/article/pii/S0965997813000379},
+    author          = {Francisco Martínez and Carlos Ogayar and Juan R. Jiménez and Antonio J. Rueda},
+    keywords        = {Boolean operations polygons, Polygon clipping, Polygon overlay, Computational geometry, Computer graphics, Geometric operations},
+    abstract        = {In this paper a simple and efficient algorithm for computing Boolean operations on polygons is presented. The algorithm works with almost any kind of input polygons: concave polygons, polygons with holes, several contours and self-intersecting edges. Important topological information, as the holes of the result polygon, is computed.}
+}
+
+@online{Clipper,
+    title        = {Clipper - an open source freeware library for
+clipping and offsetting lines and polygons},
+    url          = {http://www.angusj.com/delphi/clipper.php},
+    urldate      = {20.01.2021},
+    language     = {english},
+    author       = {Angus Johnson},
+}
+
+@online{Box2D,
+    title        = {A 2D Physics Engine for Games},
+    url          = {https://box2d.org/},
+    urldate      = {20.01.2021},
+    language     = {english},
+    author       = {Erin Catto},
 }
