--- a/thesis.tex
+++ b/thesis.tex
@@ -19,10 +19,13 @@
 
 \newcommand*\gsegment[1]{\overline{#1}}
 \newcommand*\gline[1]{\overleftrightarrow{#1}}
+\newcommand*\talgref[1]{Алгоритм \ref{#1}}
 
 \author{Терехов Д.Е.}
 \setschool{ШКОЛА ЕСТЕСТВЕННЫХ НАУК ДВФУ}
 \setgroup{Б8403а}
+
+\addbibresource{references.bib}
 
 \begin{document}
     \tableofcontents
@@ -205,6 +208,7 @@
     Для того, чтобы снизить количество вершин перед следующим этапом обработки изображения, контуры подвергаются первичной аппроксимации. Самым очевидным способом аппроксимации контура является удаление вершин лежащих на одной прямой. Также существуют алгоритмы упрощения цифровых кривых. В данной работе был реализован алгоритм Teh-Chin\cite{TehChin} c $L1$ и $k\cos$ метриками.
 
     \subsection{Аппроксимация полигонов}
+    \label{PolygonApproximation}
     Аппроксимация полигонов для текстурных мешей отличается от аппроксимации полигонов, например, в GIS системах: запрещено нарушать искомые границы, а так же необходимо минимизировать не только количество вершин, но и добавочную площадь. Мета-алгоритм можно описать следующим образом:
 
     \begin{algo}[H]
@@ -338,9 +342,147 @@
         \end{algorithmic}
     \end{algo}
 
-    \subsubsection{Доработка триангуляции Делоне}
-    \cite{DelaunayRemove}\cite{LinearDelaunay}
+    \subsection{Генетический алгоритм}
+    Основная идея всех эволюционных алгоритмов одинаково: популяция особей в некоторой среде конкурирует за ограниченные ресурсы, конкуренция приводит к естественному отбору -- выживает наиболее приспособленный. Каждая особь представляет собой элемент в области определения функции приспособленности (fitness or evaluation function, функции оценки), которую необходимо минимизировать. Изначально создается популяции из случайных значений из области определения функции. Затем отбираются лучшие особи, которые подвергаются воздействую операторов вариации (рекомбинации и\textbackslash или мутации). Из полученной популяции только часть наиболее приспособленных особей доживает до нового поколение. И так повторяется до тех пор, пока не будет достигнуто желаемое решение. Генетический мета-алгоритм показан в \talgref{meta-genetics}.
+
+    \begin{algo}[H]
+        \setstretch{1}
+        \caption{Генетический мета-алгоритм}
+        \label{meta-genetics}
+        \begin{algorithmic}[1]
+            \State $INITIALIZE$ population with random candidate solution
+            \State $EVALUATE$ each candidate
+            \While{$TERMINATION\; CONDITION$ \textbf{is not} satisfied}
+                \State $SELECT$ parents
+                \State $RECOMBINE$ pairs of parents
+                \State $MUTATE$ offspring
+                \State $EVALUATE$ new candidates
+                \State $SELECT$ individuals for the next generation
+            \EndWhile
+        \end{algorithmic}
+    \end{algo}
+
+    Стоит отметить, что все компоненты, кроме оценки особей, являются стохастическими. Например, мутация задевает случайную часть решения, а слабые особи имеют малый шанс выиграть в естественном отборе.
+
+    \subsubsection{Составные части генетического алгоритма}
+    \paragraph{Инициализация}
+    Чаще всего изначальная популяция просто заполняется случайно сгенерированными особями. Однако, могут использоваться специфические для данной проблемы эвристики, которые позволяют создать более приспособленную изначальную популяцию.
+    \paragraph{Функция оценки}
+    Функция оценки задает требования, к которым популяция вынуждена адаптироваться. Технически, это функция, которая определяет меру качества особи. Смысл всего генетического алгоритма в минимизации функции оценки для популяции, чтобы достичь наиболее качественного решения.
+    \paragraph{Популяция}
+    Популяции это набор особей. Практически во всех вариантах эволюционных алгоритмов размер популяции постоянен. Отбор берет во внимание всю популяцию целиком, а не отдельно каждого индивида.
+    \paragraph{Механизм отбора родителей}
+    Механизм отбора родителей используется, чтобы выбрать наиболее хороших особей для того, чтобы они стали родителями для следующего поколения. Отбор родителей необходим, чтобы повысить качество будущего поколения. Для создания потомства к родителям применяют операторы вариации. Выбор родителей всегда вероятностный. Более приспособленные особи имеет более высокий шанс стать родителями, но менее приспособленным особям дается малый шанс, иначе поиск решения будет слишком жадным.
+    \paragraph{Операторы вариации. Мутация и рекомбинация}
+    Роль операторов вариации -- создание новых особей из старых. Обычно, разделяют операторы вариации разделяют на 2 группы по арности: унарная и n-арная версии. Все операторы вариации, обычно, стохастические. Исключением является применение операторов вариации, в которых заложено знание о проблеме. Таким образом, можно исключить образование заведомо неверных решений в популяции либо всегда создавать решения лучше их родительских.
+
+    Унарный оператор вариации, обычно, называют мутацией. Мутация применяется к одной особи, производя из неё новую слегка измененную особь. Роль мутации заключается в исследовании новых мест в области значений функции оценки. Мутация позволяет избежать преждевременной сходимости в локальном минимуме.
+
+    Бинарный оператор вариации, обычно, называют рекомбинацией или кроссовером. Как следует из названия, такой оператор совмещает информацию от двух родителей, сохраняя свойства от обоих. Роль кроссовера заключается в эксплуатации области значения функции оценки, занимаемой текущим поколением популяции.
+    \paragraph{Механизм отбора выживших}
+    После создания новых особей необходимо выбрать, какие особи составят следующее поколение популяции. Как и механизм отбора родителей, механизм отбора выживших является стохастическим и дает шанс менее приспособленным особям быть отобранными в новое поколение.
+    \paragraph{Условие выхода}
+    Условие выхода очень сильно зависит от задачи. Часто используют следующие варианты или их комбинации:
+    \begin{itemize}
+        \item Популяция сошлась к какому-то решение;
+        \item Было достигнуто достаточно качественное решение;
+        \item Был достигнут лимит времени на эволюцию;
+        \item Прирост качества сильно замедлился;
+        \item и т.д.
+    \end{itemize}
+
+    \subsection{Упаковка в атлас}
+    Для упаковки в атлас мы используем классический генетический алгоритм из \talgref{meta-genetics}, но с некоторыми модификациями, о которых будет сказано позже. Для начала перечислим конкретные имплементации всех этапов генетического алгоритма для упаковки полигональных изображений в атлас.
+    \subsubsection{Репрезентация особей}
+    Особь является отражает решение конкретной проблемы. В нашем случае особь состоит из 2 массивов данных. В первом массиве хранятся тройки целых чисел, отвечающие за трансформацию каждого $ImageObject$ (перемещение по осям X и Y, а также поворот). В о втором массиве хранятся флаги присутствия конкретного объекта $Image$ в атласа ($true$ -- присутствует, $false$ -- отсутствует). Размер атласа подбирается отдельно и не является частью генетического алгоритма.
+    \subsubsection{Популяция}
+    Размер популяции константный и задается в качестве параметра для генетического алгоритма.
+    \subsubsection{Механизм отбора родителей}
+    Как было сказано ранее, отбор родителей это стохастический процесс, в котором более приспособленные родители имеют более высокий шанс быть выбранными, поэтому первое, что приходит на ум, это присвоить шанс выбора пропорционально значению функции оценки, то есть $P\left(i\right) = \frac{f_i}{\sum_{j=0}^{n - 1} f_i}$. Однако такое наивное решение имеет ряд недостатков:
+    \begin{itemize}
+        \item Выдающиеся особи быстро захватывают популяцию, что вырождается в преждевременной сходимости, часто, не к лучшему результату;
+        \item Когда значение оценочной функции особей близко друг к другу, то выбор становится равномерно случайным;
+        \item При применении аффинных преобразований к функции оценки, данный способ отбора начинает вести себя совершенно по-другому.
+    \end{itemize}
+
+    Отбор по рангу\cite{RankingSelection} это другой метод, вдохновленный недостатками отбору по значению оценочной функции. Данный метод сортирует популяцию по значению оценочной функции и присваивает ранг каждой особи (лучшее решение имеет ранг $n - 1$, а худшее $0$). Вероятность отбора вычисляется на основе ранга, например, линейно или экспоненциально уменьшаясь от лучшего решения к худшему,
+    \begin{align*}
+        P_{linear}\left(i\right) &= \frac{2 - s}{n} + \frac{2i\left(s - 1\right)}{n\left(n - 1\right)},\\
+        P_{exp}\left(i\right) &= \frac{1 - e^{-i}}{c}.
+    \end{align*}
+    где $s$ это константа $1 < s\leq 2$, а $c$ выбирается так, чтобы сумма вероятностей равнялась $1$. В алгоритме упаковки применяется отбор по рангу с экспоненциальной формулой.
+
+    После присвоения вероятностей выбора каждой особи необходимо составить множество родителей. Для этого существуют такие алгоритмы, как roulette wheel или tournament selection, но в алгоритме упаковки было решено использовать \textbf{stochastic universal sampling}\cite{RankingSelection}.
+
+    \begin{algo}[H]
+        \setstretch{1}
+        \caption{Stochastic Universal Sampling}
+        \begin{algorithmic}[1]
+            \State $a$ is cumulative probability distribution
+            \State $m$ is number of parents we want to selects
+            \State $current \gets 1$
+            \State $i \gets 1$
+            \State $r \gets$ uniformly random from $\left[0, 1 / m\right]$
+            \While{$current \leq m$}
+                \While{$r \leq a_i$}
+                    \State $parents_i \gets popoluation_i$
+                    \State $r \gets 4 + 1 / m$
+                    \State $current \gets current + 1$
+                \EndWhile
+                \State $i \gets i + 1$
+            \EndWhile
+        \end{algorithmic}
+    \end{algo}
+
+    \subsection{Мутация}
+    В алгоритме упаковки равновероятностно выбирается одна из двух мутаций: \textbf{Reset} и \textbf{Creep}.
+
+    \textbf{Random Resetting} мутация изменяет значение случайного гена на значение из заранее определенного диапазона. Например, ген вращения $ImageObject$ можно повторно установить в значение в диапазоне $\left[0, 359\right]$ градусов.
+
+    \textbf{Creep} мутация добавляет какую-то малую случайную дельту к значению гена. Например, можно добавлять к гену поворота случайный поворот в диапазоне $\left[-10, 10\right]$ градусов.
+
+    \subsection{Кроссовер}
+    В алгоритме упаковки используется простейший одноточечный кроссовер, работу которого демонстрирует следующее изображение.
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=1]{images/OnePointCrossover.png}
+        \caption{Одноточечный кроссовер}
+    \end{figure}
+
+    \subsection{Отбор выживших}
+    В алгоритме используется композитная стратегия отбора выживших, состоящие из следующих стратегий отбора.
+
+    \textbf{Age based}. Если особь прожила больше $a$ поколений, то эта особь не попадает в новое поколение.
+
+    \textbf{Elitism}. $e$ наиболее приспособленных особей обязательно проходят в следующее поколение. Данная стратегия позволяет не потерять наиболее хорошее решение из найденных.
+
+    \textbf{Replace worst (GENITOR)}. $m$ худших особей замещаются созданными потомками.
+    \subsection{Функция оценки}
+    Функция оценки включает в себя ограничения, накладываемые на решение, и задана таким образом, чтобы мотивировать популяцию эволюционировать в приемлемое решение как можно быстрее. Главными ограничениями является площадь пересечения полигонов и площадь выступов, образуемых минимальными и максимальными значениями координат.
+
+    \begin{figure}[H]
+        \centering
+        \includegraphics[scale=0.5]{images/ledges.png}
+        \caption{Площадь выступов}
+    \end{figure}
+
+    Эти два ограничения мотивируют решение строиться таким образом, чтобы все фигуры попадали в атлас и не пересекались с остальными фигурами. Также в функции оценки учитывается количество изображений, не попавших в атлас, помноженное либо на среднюю площадь изображений, что мотивируют решение вобрать себя как можно больше изображений. Функция оценки это сумма перечисленных выше слагаемых с коэффициентами:
+    \[
+        F\left(individual\right) = a \cdot S_{intersection} + b \cdot S_{outside\;ledges} + c \cdot missing \cdot S_{avg}
+    \]
+    где $c$ это коэффициент, контролируемый снаружи. С его помощью можно ослабить требование к решению, что позволит алгоритму сойтись.
+
+    Если нахождение второго и третьего слагаемых тривиально, то нахождение площади пересечения всех полигонов довольно сложно. Существуют алгоритмы, способные производить булевые операции над полигонами с дырами и самопересечениями. Например, алгоритмы Vatti\cite{Vatti}, Greiner-Hormann\cite{GreinerHormann} или Martinez\cite{Martinez}. В данной работе был реализован модифицированный алгоритм Martinez\cite{Martinez}, способный подсчитать за один проход объединение всех полигонов, однако в скорости он всё равно уступает библиотеке Clipper за авторством Angus Johnson \cite{Clipper}, которая представляет собой расширение алгоритма Vatti \cite{Vatti}. Площадь пересечения между фигурами считается, как разница площади объединения и суммы площади полигонов $S_{intersection} = S\left(\bigcup\limits_{i = 0}^{m - 1} P_i\right) - \sum\limits_{i = 0}^{m - 1}S\left(P_i\right)$.
+
+    \subsection{Memetic algorithm}
+    Данный алгоритм упаковки является расширением классического генетического алгоритма, представленного в \talgref{meta-genetics}, и является реализацией memetic algorithm, который использует процедуру локального поиска, именуемой в литературе фазой обучения (learning phase). Некоторые выбранные особи перед отбором родителей проходят проходят процедуру локального поиска, которой известна специфика решаемой проблемы и которая пытается улучшить существующее решение. В данной работе используются 2 процедуры локального поиска: \textbf{hole filling} и \textbf{physics}.
+
+    \textbf{Hole filling}. Процедура пытается заполнить полигональные дыры объектами, которые потенциально могут поместиться в данную дыру.
+
+    \textbf{Physics}. Используется симуляция физики при помощи известного физического движка Box2D \cite{Box2D}. Симуляция физики позволяет быстро преодолеть момент, когда между объектами остаются маленькие пересечения, от которых долго избавляется эволюция.
+
+    \subsection{Условие выхода}
+    Условия выхода имеет 2 этапа. Первый этап -- это достижение приемлемого решения. Решение считается приемлемым, если $S_{outside_ledges} = S_{intersection} = 0$. Далее дается константное количество поколений для улучшения решения.
     \newpage
-    \bibliographystyle{ugost2008ls}
-    \bibliography{references}
+    \printbibliography
 \end{document}
