--- a/thesis.tex
+++ b/thesis.tex
@@ -21,20 +21,26 @@
 \newcommand*\gline[1]{\overleftrightarrow{#1}}
 \newcommand*\talgref[1]{Алгоритм \ref{#1}}
 
-\author{Терехов Д.Е.}
-\setschool{ШКОЛА ЕСТЕСТВЕННЫХ НАУК ДВФУ}
-\setgroup{Б8403а}
+\author{Терехов Дмитрий Евгеньевич}
+\title{Полигонизация текстур и упаковка полигональных текстур в атлас}
+\setfaculty{09.04.01 Информатика и вычислительная техника}
+\setprogram{Искусственный интеллект и большие данные}
+\setgroup{М9119-09.04.01иибд}
+\setsupervisor{Сапрыкина Елена Валерьевна}{}
+\setdirector{Мирин Илья Геннадьевич}{}
+\setsecretary{Сапрыкина Елена Валерьевна}{}
 
 \addbibresource{references.bib}
 
 \begin{document}
-    \tableofcontents
-    \pagebreak
+    \maketitle{practice}
     \begin{abstract}
         В данной работе представлены два эффективных алгоритма: генерация текстурного меша с последующим упрощением и упаковка полигональных текстур в атлас. Оба алгоритма работают с полигонами следующих типов: невыпуклые, полигоны с дырами, полигоны, состоящие из нескольких контуров.
 
         \textit{Ключевые слова: генерация меша, упрощение полигонов, упаковка в контейнеры.}
     \end{abstract}
+    \pagebreak
+    \tableofcontents
     \pagebreak
     {\centering\section*{Введение}}
     Целью работы является решение задач упрощения полигонов и упаковки, которые играют важную роль в таких прикладных областях, как компьютерная графика, GIS системы, промышленность и т.д. Решение этой задачи также опирается на прикладную область: компьютерную графику, а именно автоматическую генерацию текстурного меша с последующей упаковкой полигональных текстур в текстурные атласы.
