Add info about polygons merge

--- a/thesis.tex
+++ b/thesis.tex
@@ -294,7 +294,7 @@
     \end{figure}
 
     \subsubsection{Мердж полигонов}
-    Рассказ про Triangular Expansion, алгоритм Joe and Simpson и алгоритм Asano.
+    В каждой полигональной дыре (включая $frame$) выбирается 2 пары последовательных вершин из разных полигонов, которые образуют минимальный четырехугольник, который не пересекает другие стороны. Данные 4 вершины являются точками мерджа.
     \begin{figure}[H]
         \centering
         \begin{subfigure}[t]{\linewidth}
