Add info about genetic algorithm's termination condition and choosing atlas size

--- a/thesis.tex
+++ b/thesis.tex
@@ -489,6 +489,11 @@
 
     \subsection{Условие выхода}
     Условия выхода имеет 2 этапа. Первый этап -- это достижение приемлемого решения. Решение считается приемлемым, если $S_{outside_ledges} = S_{intersection} = 0$. Далее дается константное количество поколений для улучшения решения.
+
+    Условие выхода может сработать, когда ещё не все изображения упаковались (возможно, их и нельзя упаковать в тот же атлас). Для неупакованных изображений алгоритм запускается заново.
+
+    \subsection{Выбор размера атласа}
+    Размер атласа выбирается путем упаковки изображений быстрым жадным алгоритмов. Например, алгоритмом гильотины \cite{ThousandWayToPackBin}.
     \newpage
     \printbibliography
 \end{document}
