--- a/thesis.tex
+++ b/thesis.tex
@@ -234,7 +234,7 @@
         \end{algorithmic}
     \end{algo}
 
-    На стадии инициализации создаются две модели множества полигонов. Первая модель это дерево полигонов, где каждый узел дерева это полигон $P_i$, представленный двусвязным зацикленным списком вершин $P_i = \left(v_j\right)_{j=0}^{n - 1}$, $v_{j \pm m}$ подразумевает $v_{j \pm m \pmod n}$. Корнем дерева является ограничивающая рамка ($frame$). Вторая модель ($topology$) это триангуляция Делоне с ограничениями. В реализации алгоритма использовался пакет, разработанный в рамках бакалаврской выпускной квалификационной работы \cite{Delaunay}. Данный пакет подвергся доработке и оптимизациям СМ ПОДРАЗДЕЛ КАКОЙ-ТО. Триангуляция Делоне это мощнейший инструмент для проверки преобразований над полигонами, а также вычисления полигона видимости. Подробнее в РАЗДЕЛЕ НОМЕР КАКОЙ-ТО. Также на стадии инициализации происходит подсчет минимальной возможной трансформации для каждой вершины. "Стоимость" трансформации измеряется в добавочной площади. Для быстрого поиска минимальной трансформации (т.е. трансформации с минимальной стоимостью) используется сбалансированное дерево поиска ($minExtractor$).
+    На стадии инициализации создаются две модели множества полигонов. Первая модель это дерево полигонов, где каждый узел дерева это полигон $P_i$, представленный двусвязным зацикленным списком вершин $P_i = \left(v_j\right)_{j=0}^{n - 1}$, $v_{j \pm m}$ подразумевает $v_{j \pm m \pmod n}$. Корнем дерева является ограничивающая рамка ($frame$). Вторая модель ($topology$) это триангуляция Делоне с ограничениями. В реализации алгоритма использовался пакет, разработанный в рамках бакалаврской выпускной квалификационной работы \cite{Delaunay}. Триангуляция Делоне это мощнейший инструмент для проверки преобразований над полигонами, а также вычисления полигона видимости. Также на стадии инициализации происходит подсчет минимальной возможной трансформации для каждой вершины. "Стоимость" трансформации измеряется в добавочной площади. Для быстрого поиска минимальной трансформации (т.е. трансформации с минимальной стоимостью) используется сбалансированное дерево поиска ($minExtractor$).
 
     Далее выполняются преобразования или мерджатся полигоны, пока не условие выхода не будет достигнуто. Процедура $RetrieveImage$ возвращает объект типа $Image$. $Image$ содержит в себе все вершины и индексных массив (массив троек индексов вершин), а также массив объектов типа $ImageObject$. Объектом картинки называется граничный контур со всеми принадлежащими ему дырами. $ImageObject$ содержит в себе индексы вершин для контура и всех дыр, а также индексы троек индексов, ему принадлежащих. Данные структуры данных в дальнейшем используются для упаковки.
 
