Set correct practice title

--- a/thesis.tex
+++ b/thesis.tex
@@ -29,7 +29,7 @@
 \setsupervisor{Сапрыкина Елена Валерьевна}{}
 \setdirector{Мирин Илья Геннадьевич}{}
 \setsecretary{Сапрыкина Елена Валерьевна}{}
-
+\setpracticetitle{Преддипломная практика}
 \addbibresource{references.bib}
 
 \begin{document}
